--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </li>
                             <li class="identities">
                                 <a href="https://blog.mrsheep.xyz">
-                                    <i aria-hidden="true" class="fa fa-rss"></i>
+                                    <i aria-hidden="true" class="fas fa-rss"></i>
                                     <span class="label">Blog</span>
                                     <span class="fake-link">Sheep's Blog</span>
                                 </a>
