Fix icon & links

--- a/src/index.html
+++ b/src/index.html
@@ -105,28 +105,28 @@
                     <figure class="identities">
                         <ul>
                             <li class="identities">
-                                <a href="https://github.com/Mr-Sheep/">
+                                <a href="https://github.com/Mr-Sheep/" target="_blank">
                                     <i aria-hidden="true" class="fab fa-github"></i>
                                     <span class="label">GitHub</span>
                                     <span class="fake-link">@Mr-Sheep</span>
                                 </a>
                             </li>
                             <li class="identities">
-                                <a href="https://blog.mrsheep.xyz">
+                                <a href="https://blog.mrsheep.xyz" target="_blank">
                                     <i aria-hidden="true" class="fas fa-rss"></i>
                                     <span class="label">Blog</span>
                                     <span class="fake-link">Sheep's Blog</span>
                                 </a>
                             </li>
                             <li class="identities">
-                                <a href="https://lab.mrsheep.xyz">
+                                <a href="https://lab.mrsheep.xyz" target="_blank">
                                     <i aria-hidden="true" class="fa fa-flask"></i>
                                     <span class="label">Lab</span>
                                     <span class="fake-link">Sheep's Lab</span>
                                 </a>
                             </li>
                             <li class="identities">
-                                <a href="https://bgp.he.net/AS208884">
+                                <a href="https://as208884.com" target="_blank">
                                     <i aria-hidden="true" class="fa fa-globe-europe"></i>
                                     <span class="label">ASN</span>
                                     <span class="fake-link">208884</span>
