--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
 
                 <div class="label-group">
                     <span class="header">noc-operator</span>
-                    <a class="label" href="https://as208884.com">
+                    <a class="label" href="https://as208884.net>
                         <i aria-hidden="true" class="fas fa-network-wired"></i>
                         <span class="content">AS208884</span>
                     </a>
@@ -126,7 +126,7 @@
                                 </a>
                             </li>
                             <li class="identities">
-                                <a href="https://as208884.com" target="_blank">
+                                <a href="https://as208884.net" target="_blank">
                                     <i aria-hidden="true" class="fa fa-globe-europe"></i>
                                     <span class="label">ASN</span>
                                     <span class="fake-link">208884</span>
